--- a/Recommendation System/Recommendation_system.ipynb
+++ b/Recommendation System/Recommendation_system.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Recommendation_system.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -2665,6 +2666,17 @@
           "execution_count": 83
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QhmZDtBmW--z"
+      },
+      "source": [
+        "df5= df4"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
