--- a/Recommendation System/Recommendation_system.ipynb
+++ b/Recommendation System/Recommendation_system.ipynb
@@ -4,7 +4,14 @@
   "metadata": {
     "colab": {
       "name": "Recommendation_system.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "8N-ST65fbljt",
+        "D4LsnemZbuvJ",
+        "u3_Lwmi1XzTN",
+        "SYbh1ta7Z4aT"
+      ],
+      "authorship_tag": "ABX9TyPwlQKOi0VJMT1+C0HIFcT9"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,15 +23,35 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8N-ST65fbljt"
+      },
+      "source": [
+        "## Importing Modules"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qgTXKgoXPd_4"
       },
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import seaborn as sn"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D4LsnemZbuvJ"
+      },
+      "source": [
+        "## Importing the dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -48,6 +75,15 @@
             "  interactivity=interactivity, compiler=compiler, result=result)\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rTyWAEMwXi0z"
+      },
+      "source": [
+        "## Inspecting the dataframe"
       ]
     },
     {
@@ -76,6 +112,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "65iAVtlMe_QW"
+      },
+      "source": [
+        "df.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1336,6 +1383,15 @@
           "metadata": {},
           "execution_count": 46
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u3_Lwmi1XzTN"
+      },
+      "source": [
+        "## Data Preprocessing"
       ]
     },
     {
@@ -2664,6 +2720,222 @@
           "metadata": {},
           "execution_count": 83
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SYbh1ta7Z4aT"
+      },
+      "source": [
+        "## Visualizing data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ncW56FJCcB_v"
+      },
+      "source": [
+        "sn.histplot(df.height)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k6khm1BXcF0u"
+      },
+      "source": [
+        "sn.histplot(df.height, kde= True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wY9KnnjwcLe8"
+      },
+      "source": [
+        "mean = df.height.mean()\n",
+        "mean"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w6IonQ_pcPOf"
+      },
+      "source": [
+        "df.describe()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OzXCLQ9QcPvt"
+      },
+      "source": [
+        "standard_diviation = df.height.std()\n",
+        "standard_diviation"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YRifZalLcV7b"
+      },
+      "source": [
+        "mean - 3*standard_diviation"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3q8txYNBcXw1"
+      },
+      "source": [
+        "mean + 3*standard_diviation"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HWC0-MtAcaYg"
+      },
+      "source": [
+        "df_outlier = df[(df.height<77.91) & (df.height>54.82)]\n",
+        "df_outlier"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3-Cz4p--cdjQ"
+      },
+      "source": [
+        "df_outlier.describe() "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Un5_NOHIckUd"
+      },
+      "source": [
+        "sn.boxplot(x=df['height'])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EkBPQ03IclAc"
+      },
+      "source": [
+        "sn.boxplot(x=df_outlier['height']) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zdYWTlqOcr0B"
+      },
+      "source": [
+        "df['z_score'] = (df.height - df.height.mean()) /df.height.std()\n",
+        "df.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yVQQToDfcsfH"
+      },
+      "source": [
+        "df.describe()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LSsP_Tq4cuMY"
+      },
+      "source": [
+        "df[df['z_score']>3]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2iTac07qcwE6"
+      },
+      "source": [
+        "from scipy import stats # Z score using SciPy\n",
+        "a = stats.zscore(df.height) \n",
+        "a"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cQMR_YvdZwe4"
+      },
+      "source": [
+        "## Removing outliers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CxC2JuGVaA67"
+      },
+      "source": [
+        "### Verifying with plot"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q268ok4uYFKt"
+      },
+      "source": [
+        "## Collaborative Filtering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oRO9P1heYLyw"
+      },
+      "source": [
+        "### Splitting the dataset "
       ]
     }
   ]
