--- a/Recommendation System/Recommendation_system.ipynb
+++ b/Recommendation System/Recommendation_system.ipynb
@@ -11,7 +11,7 @@
         "u3_Lwmi1XzTN",
         "SYbh1ta7Z4aT"
       ],
-      "authorship_tag": "ABX9TyPQvvkemHzgbVsHvsIWb+2Y"
+      "authorship_tag": "ABX9TyNWOuRNiTsCSfXefB2KXeGX"
     },
     "kernelspec": {
       "name": "python3",
@@ -3216,6 +3216,26 @@
       "source": [
         "### Splitting the dataset "
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aB99vA0E8dLZ"
+      },
+      "source": [
+        "## User based collaborative filtering"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cPWWGSjW8iCj"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
