--- a/Recommendation System/Recommendation_system.ipynb
+++ b/Recommendation System/Recommendation_system.ipynb
@@ -11,7 +11,7 @@
         "u3_Lwmi1XzTN",
         "SYbh1ta7Z4aT"
       ],
-      "authorship_tag": "ABX9TyNWOuRNiTsCSfXefB2KXeGX"
+      "authorship_tag": "ABX9TyMmc+B7RjEaxP/nQeglEN+O"
     },
     "kernelspec": {
       "name": "python3",
@@ -3230,6 +3230,35 @@
       "cell_type": "code",
       "metadata": {
         "id": "cPWWGSjW8iCj"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ENqPN0HhppYi"
+      },
+      "source": [
+        "## SQL databases "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VWvJC78LpuoA"
+      },
+      "source": [
+        "### with real time changes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1ui94k-ypy_G"
       },
       "source": [
         ""
