--- a/Recommendation System/Recommendation_system.ipynb
+++ b/Recommendation System/Recommendation_system.ipynb
@@ -11,7 +11,7 @@
         "u3_Lwmi1XzTN",
         "SYbh1ta7Z4aT"
       ],
-      "authorship_tag": "ABX9TyMmc+B7RjEaxP/nQeglEN+O"
+      "authorship_tag": "ABX9TyN8P6G4qGPQlxDlFjGLkNLY"
     },
     "kernelspec": {
       "name": "python3",
@@ -3224,6 +3224,15 @@
       },
       "source": [
         "## User based collaborative filtering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oOAkXS7SqsZs"
+      },
+      "source": [
+        "### Accuracy"
       ]
     },
     {
