--- a/Movie Recommendation System/Movie.ipynb
+++ b/Movie Recommendation System/Movie.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled22.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMkl4IW9ydDToCZv40CSGdF"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPOaOY4tRs2qxJKMqx4xouL"
     },
     "kernelspec": {
       "name": "python3",
@@ -26,10 +27,9 @@
         "import numpy as np\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
-        "\n",
         "df = pd.read_csv(\"movie_dataset.csv\")"
       ],
-      "execution_count": 32,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -62,11 +62,11 @@
       },
       "source": [
         "for feature in features:\n",
-        "    df[feature] = df[feature].fillna('') #filling all NaNs with blank string\n",
+        "    df[feature] = df[feature].fillna('') \n",
         "\n",
-        "df[\"combined_features\"] = df.apply(combine_features,axis=1) #applying combined_features() method over each rows of dataframe and storing the combined string in \"combined_features\" column"
+        "df[\"combined_features\"] = df.apply(combine_features,axis=1)"
       ],
-      "execution_count": 35,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "id": "VrZYKu290b_q"
       },
       "source": [
-        "cv = CountVectorizer() #creating new CountVectorizer() object\n",
+        "cv = CountVectorizer()\n",
         "count_matrix = cv.fit_transform(df[\"combined_features\"])"
       ],
       "execution_count": 37,
