--- a/Movie Recommendation System/Movie.ipynb
+++ b/Movie Recommendation System/Movie.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled22.ipynb",
+      "name": "Copy of Untitled22.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPOaOY4tRs2qxJKMqx4xouL"
+      "authorship_tag": "ABX9TyM4hNfCDolnC8k+stcA2Uvn"
     },
     "kernelspec": {
       "name": "python3",
@@ -29,7 +29,7 @@
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "df = pd.read_csv(\"movie_dataset.csv\")"
       ],
-      "execution_count": 46,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -40,7 +40,7 @@
       "source": [
         "features = ['keywords','cast','genres','director']"
       ],
-      "execution_count": 33,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "def combine_features(row):\n",
         "    return row['keywords']+\" \"+row['cast']+\" \"+row['genres']+\" \"+row['director']"
       ],
-      "execution_count": 34,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "\n",
         "df[\"combined_features\"] = df.apply(combine_features,axis=1)"
       ],
-      "execution_count": 45,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -77,12 +77,12 @@
           "height": 53
         },
         "id": "KwIxI6PF0XjU",
-        "outputId": "4fb7fcd2-7da2-49ae-b870-8b2a711002b6"
+        "outputId": "c0c9754f-ceaf-429f-87a0-b05af638b021"
       },
       "source": [
         "df.iloc[0].combined_features"
       ],
-      "execution_count": 36,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -95,7 +95,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 28
         }
       ]
     },
@@ -108,7 +108,7 @@
         "cv = CountVectorizer()\n",
         "count_matrix = cv.fit_transform(df[\"combined_features\"])"
       ],
-      "execution_count": 37,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "\n",
         "cosine_sim = cosine_similarity(count_matrix)"
       ],
-      "execution_count": 38,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
         "def get_index_from_title(title):\n",
         "    return df[df.title == title][\"index\"].values[0]"
       ],
-      "execution_count": 39,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -144,12 +144,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lZZk9c2j03Ni",
-        "outputId": "eb57bd97-73c2-47e9-82ac-cbb7ba5c1267"
+        "outputId": "d551a663-077a-4150-83cd-f120cf114297"
       },
       "source": [
         "movie_name = (input(\"Enter movie name: \"))"
       ],
-      "execution_count": 40,
+      "execution_count": 32,
       "outputs": [
         {
           "name": "stdout",
@@ -169,7 +169,7 @@
         "movie_index = get_index_from_title(movie_name)\n",
         "similar_movies = list(enumerate(cosine_sim[movie_index]))"
       ],
-      "execution_count": 41,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -180,7 +180,7 @@
       "source": [
         "sorted_similar_movies = sorted(similar_movies,key=lambda x:x[1],reverse=True)[1:]"
       ],
-      "execution_count": 42,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -190,24 +190,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qt0tHUKx0mc0",
-        "outputId": "f3d6dcb9-e4fa-4028-e1ad-a3833ab8b5ce"
+        "outputId": "0fe32afa-dae0-4686-dc7c-42bec13814f1"
       },
       "source": [
         "i=0\n",
-        "print(\"Top 5 similar movies to \"+movie_user_likes+\" are:\\n\")\n",
+        "print(\"Top 5 similar movies to \"+\"movie_user_likes\"+\" are:\\n\")\n",
         "for element in sorted_similar_movies:\n",
         "    print(get_title_from_index(element[0]))\n",
         "    i=i+1\n",
         "    if i>5:\n",
         "        break"
       ],
-      "execution_count": 43,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Top 5 similar movies to Avatar are:\n",
+            "Top 5 similar movies to movie_user_likes are:\n",
             "\n",
             "Guardians of the Galaxy\n",
             "Aliens\n",
@@ -218,6 +218,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y0q4A0kpKmAX"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 35,
+      "outputs": []
     }
   ]
 }
